infrastructure/base/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  labels:
    app: survey-app
spec:
  ports:
  - port: 3306
  selector:
    app: survey-app
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb-app
  labels:
    app: survey-app
spec:
  serviceName: mariadb-service
  selector:
    matchLabels:
      app: survey-app
  template:
    metadata:
      labels:
        app: survey-app
    spec:
      containers:
      - image: mariadb
        name: mariadb-container
        ports:
        - containerPort: 3306
          name: postgres-port
        volumeMounts:
        - name: mariadb-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: mariadb-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: survey-service
  labels:
    app: survey-app
spec:
  ports:
  - port: 80
  selector:
    app: survey-app
  type:
    LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: limesurvey-app
  labels:
    app: survey-app
spec:
  selector:
    matchLabels:
      app: survey-app
  template:
    metadata:
      labels:
        app: survey-app
    spec:
      containers:
      - image: acspri/limesurvey:latest
        name: limesurvey-container
        ports:
        - containerPort: 80
          name: lime-port
